--- a/frontend/src/app/header/header.html
+++ b/frontend/src/app/header/header.html
@@ -1,23 +1,23 @@
-<header class="bg-white shadow-sm border-b">
+<header class="bg-white shadow-sm border-b" style="background-color: rgb(230, 248, 252);">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between items-center py-4">
       <!-- Logo/Brand -->
-      <div class="flex items-center">
-        <h1 class="text-2xl font-bold text-blue-600">Dashboard</h1>
-      </div>
-      
+   <div class="flex items-center space-x-3">
+      <img src="assets/images/dashboard-logo.png" alt="Logo" class="w-64" />
+      <!-- <h1 class="text-2xl font-bold" style="color: #516171;">Dashboard</h1> -->
+    </div>     
       <!-- Navigation -->
-      <nav class="flex space-x-8">
+      <nav class="flex space-x-8 font-bold" style="color: rgb(17, 0, 58);">
         <a routerLink="/transactions" routerLinkActive="text-blue-600 border-b-2 border-blue-600" 
-           class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium transition-colors">
+           class="hover:text-blue-600 px-3 py-2 text-sm  transition-colors">
           Transactions
         </a>
         <a routerLink="/categories" routerLinkActive="text-blue-600 border-b-2 border-blue-600" 
-           class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium transition-colors">
+           class="hover:text-blue-600 px-3 py-2 text-sm font-medium transition-colors">
           Categories
         </a>
         <a routerLink="/reports" routerLinkActive="text-blue-600 border-b-2 border-blue-600" 
-           class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium transition-colors">
+           class="hover:text-blue-600 px-3 py-2 text-sm font-medium transition-colors">
           Reports
         </a>
       </nav>
