--- a/frontend/src/app/header/header.html
+++ b/frontend/src/app/header/header.html
@@ -3,7 +3,7 @@
     <div class="flex justify-between items-center py-4">
       <!-- Logo/Brand -->
    <div class="flex items-center space-x-3">
-      <img src="assets/images/dashboard-logo.png" alt="Logo" class="w-64" />
+      Dashboard
       <!-- <h1 class="text-2xl font-bold" style="color: #516171;">Dashboard</h1> -->
     </div>     
       <!-- Navigation -->
